tests/errors/phantom-event.expect
---CODE---
1
---STDERR---
error: Component provided phantom event to non-phantom port
  ┌─ tests/errors/phantom-event.fil:7:27
  │
4 │     @interface[G, G+1] @phantom go: 1,
  │                - This event is defined to be @phantom
  ·
7 │     r := new Register[32]<G, G+2>(left);
  │                           ^ Invoke provides phantom event to non-phantom port
  │
  ┌─ ./primitives/./state.fil:6:5
  │
6 │     @interface[G, G+1] write_en: 1,
  │     ------------------------------ Instance's signature defines this port to be concrete
  │
  = Phantom ports are compiled away and cannot be used by subcomponents

